--- a/menu/index.html
+++ b/menu/index.html
@@ -230,7 +230,7 @@
                 <div class="col-7">
                     <span class="hint-title"><b>Depoimentos</b></span>
                     <h1 class="title">
-                        <b>O que dizem sobre nós</b>
+                        <b>O que dizem sobre nós ?</b>
                     </h1>
 
                     <div class="mb-5">
