--- a/menu/index.html
+++ b/menu/index.html
@@ -81,7 +81,7 @@
                             </a>
                         </div>
                     </div>
-                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                    <a href="https://www.instagram.com/xxx" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
