--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -17,6 +17,17 @@
         <h1>Hello, world!</h1>
     </div>
 
+    <div class="container">
+        <h4>cores</h4>
+        <p class="text-primary">text primary</p>
+        <p class="text-secondary">text secondary</p>
+        <p class="text-success">text success</p>
+        <p class="text-danger">text danger</p>
+        <p class="text-warning">text warning</p>
+        <p class="text-info">text info</p>
+        <p class="text-dark">text dark</p>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
