--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -58,6 +58,29 @@
       </div>
     </div>
 
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          1 de 2
+        </div>
+        <div class="col">
+          2 de 2
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 de 3
+        </div>
+        <div class="col">
+          2 de 3
+        </div>
+        <div class="col">
+          3 de 3
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
