--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -109,6 +109,33 @@
       </div>
     </div>
 
+    <br>
+    <div class="container">
+      <h4>Coteudo de largura variavel</h4>
+      <div class="row justify-centent-md-center">
+        <div class="col col-lg-2">
+          1 de 3
+        </div>
+        <div class="col-md-auto">
+          conteudo de largura variavel
+        </div>
+        <div class="col col-lg-2">
+          3 de 3
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 de 3
+        </div>
+        <div class="col-md-auto">
+          conteudo de largura variavel
+        </div>
+        <div class="col col-lg-2">
+          3 de 3
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
