--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -136,6 +136,22 @@
       </div>
     </div>
 
+    <hr>
+    <div class="container">
+      <h4>Colunas</h4>
+      <div class="row align-items-start">
+        <div class="col">
+          uma de tres colunas
+        </div>
+        <div class="col">
+          uma de tres colunas
+        </div>
+        <div class="col">
+          uma de tres colunas
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
