--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -183,15 +183,15 @@
     <hr>
     <div class="container">
       <h4>Formularios</h4>
-      <div>
+      <div class="mb-3">
         <label for="email">Email</label>
         <input type="email" class="form-control" id="email">
       </div>
-      <div class="">
+      <div class="mb-3">
         <label for="password">Password</label>
         <input type="password" class="form-control" id="password" >
       </div>
-      <div >
+      <div class="mb-3">
         <input type="checkbox" class="form-check-input" id="check1" >
         <label class="form-check-label" for="check1">Selecione me</label>
       </div>
