--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -198,6 +198,22 @@
       <button type="submit" class="btn btn-primary">Enviar</button>
     </div>
 
+    <hr>
+    <div class="container">
+      <h4>Botoes</h4>
+      <div class="row mb-3">
+        <button type="button" class="btn btn-primary">primary</button>
+        <button type="button" class="btn btn-secondary">secondary</button>
+        <button type="button" class="btn btn-success">success</button>
+        <button type="button" class="btn btn-danger">danger</button>
+        <button type="button" class="btn btn-warning">warning</button>
+        <button type="button" class="btn btn-info">info</button>
+        <button type="button" class="btn btn-light">light</button>
+        <button type="button" class="btn btn-dark">dark</button>
+        <button type="button" class="btn btn-link">link</button>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
