--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -202,14 +202,14 @@
     <div class="container">
       <h4>Botoes</h4>
       <div class="row mb-3">
-        <button type="button" class="btn btn-primary">primary</button>
-        <button type="button" class="btn btn-secondary">secondary</button>
-        <button type="button" class="btn btn-success">success</button>
-        <button type="button" class="btn btn-danger">danger</button>
-        <button type="button" class="btn btn-warning">warning</button>
-        <button type="button" class="btn btn-info">info</button>
-        <button type="button" class="btn btn-light">light</button>
-        <button type="button" class="btn btn-dark">dark</button>
+        <button type="button" class="btn btn-primary mb-3">primary</button>
+        <button type="button" class="btn btn-secondary mb-3">secondary</button>
+        <button type="button" class="btn btn-success mb-3">success</button>
+        <button type="button" class="btn btn-danger mb-3">danger</button>
+        <button type="button" class="btn btn-warning mb-3">warning</button>
+        <button type="button" class="btn btn-info mb-3">info</button>
+        <button type="button" class="btn btn-light mb-3">light</button>
+        <button type="button" class="btn btn-dark mb-3">dark</button>
         <button type="button" class="btn btn-link">link</button>
       </div>
     </div>
