--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -214,6 +214,20 @@
       </div>
     </div>
 
+    <hr>
+    <div class="container mb-3">
+      <div class="row">
+        <div class="card" style="width: 18rem;">
+          <img src="https://cdn-icons-png.flaticon.com/512/226/226777.png" class="card-img-top" > 
+          <div class="card-body">
+            <h5 class="card-title">card title</h5>
+            <p class="card-text">texto do card</p>
+            <a href="#" class="btn btn-primary">veja mas</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
