--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -228,6 +228,24 @@
       </div>
     </div>
 
+    <hr>
+    <div class="container mb-3">
+      <h4>Cores de fundo</h4>
+      <div class="row">
+        <div class="p-3 mb-2 bg-primary text-white">bg-primary</div>
+        <div class="p-3 mb-2 bg-secondary text-white">bg-secondary</div>
+        <div class="p-3 mb-2 bg-success text-white">bg-success</div>
+        <div class="p-3 mb-2 bg-danger text-white">bg-danger</div>
+        <div class="p-3 mb-2 bg-warning text-dark">bg-warning</div>
+        <div class="p-3 mb-2 bg-info text-dark">bg-info</div>
+        <div class="p-3 mb-2 bg-light text-dark">bg-light</div>
+        <div class="p-3 mb-2 bg-dark text-white">bg-dark</div>
+        <div class="p-3 mb-2 bg-body text-dark">bg-body</div>
+        <div class="p-3 mb-2 bg-white text-dark">bg-white</div>
+        <div class="p-3 mb-2 bg-transparent text-dark">bg-transparent</div>
+      </div>
+    </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
