--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -244,6 +244,20 @@
         <div class="p-3 mb-2 bg-white text-dark">bg-white</div>
         <div class="p-3 mb-2 bg-transparent text-dark">bg-transparent</div>
       </div>
+      <h4>Cores de fundo gradient</h4>
+      <div class="row">
+        <div class="p-3 mb-2 bg-primary bg-gradient text-white">bg-primary</div>
+        <div class="p-3 mb-2 bg-secondary bg-gradient text-white">bg-secondary</div>
+        <div class="p-3 mb-2 bg-success bg-gradient text-white">bg-success</div>
+        <div class="p-3 mb-2 bg-danger bg-gradient text-white">bg-danger</div>
+        <div class="p-3 mb-2 bg-warning bg-gradient text-dark">bg-warning</div>
+        <div class="p-3 mb-2 bg-info bg-gradient text-dark">bg-info</div>
+        <div class="p-3 mb-2 bg-light bg-gradient text-dark">bg-light</div>
+        <div class="p-3 mb-2 bg-dark bg-gradient text-white">bg-dark</div>
+        <div class="p-3 mb-2 bg-body bg-gradient text-dark">bg-body</div>
+        <div class="p-3 mb-2 bg-white bg-gradient text-dark">bg-white</div>
+        <div class="p-3 mb-2 bg-transparent bg-gradient text-dark">bg-transparent</div>
+      </div>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
