--- a/projetos-51/fundamentos/index.html
+++ b/projetos-51/fundamentos/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Hello, world!</title>
   </head>
   <body>
@@ -258,6 +260,26 @@
         <div class="p-3 mb-2 bg-white bg-gradient text-dark">bg-white</div>
         <div class="p-3 mb-2 bg-transparent bg-gradient text-dark">bg-transparent</div>
       </div>
+    </div>
+
+    <hr>
+    <div class="container mb-3">
+      <h4>Espacamentos</h4>
+      <div class="row justify-content-center">
+        <div class="col-md-2  p-5 text-white" style="background-color: red;">
+          coluna
+        </div>
+        <div class="col-md-6 p-5" style="background-color: blue;">
+          coluna
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <div class="container mb-3">
+      <h4>icones</h4>
+      <i class="bi-alarm"></i>
+      <i class="bi bi-airplane"></i>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
