--- a/projetos-51/educ/index.html
+++ b/projetos-51/educ/index.html
@@ -40,6 +40,21 @@
         </div>
     </nav>
 
+    <section class="capa bg-success">
+        <div class="container">
+            <div class="row py-5 mt-5">
+                <div class="col-md-6 ">
+                    <h1>BEM VINDO AO EDUC</h1>
+                    <h3>Conhecimento para vida toda</h3>
+                    <a>Saber mais</a>
+                </div>
+                <div class="col-md-6 ">
+                    coluna
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
