--- a/cfb-bootstrap5/aula32/index.html
+++ b/cfb-bootstrap5/aula32/index.html
@@ -18,7 +18,7 @@
             <a href="#" target="_blank">curso de bootstrap</a><br/>
             <a href="#" target="_blank">curso de arduino</a><br/>
             <a href="#" target="_blank">curso de javascript</a><br/>
-            <a href="#" tabindex="_blank">curso de #c</a><br/>
+            <a href="#" target="_blank">curso de #c</a><br/>
         </div>
     </div>
 
@@ -31,7 +31,7 @@
             <a href="#" target="_blank">curso de bootstrap</a><br/>
             <a href="#" target="_blank">curso de arduino</a><br/>
             <a href="#" target="_blank">curso de javascript</a><br/>
-            <a href="#" tabindex="_blank">curso de #c</a><br/>
+            <a href="#" target="_blank">curso de #c</a><br/>
         </div>
     </div>
 
