--- a/quitanda/index.html
+++ b/quitanda/index.html
@@ -152,6 +152,303 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000002.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart-fill"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000003.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000004.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000005.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart-fill"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000006.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000007.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart-fill"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000008.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000009.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart-fill"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000010.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000011.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6 d-flex align-items-stretch">
+                    <div class="card text-center bg-light">
+                        <a href="#" class="position-absolute right-0 p-2 text-danger" >
+                            <svg class="bi" width="24" height="24" fill="currentColor">
+                                <use xlink:href="/bi.svg#suit-heart"></use>
+                            </svg>
+                        </a>
+                        <img src="/img/produtos/000012.jpg" class="card-img-top">
+                        <div class="card-header">
+                            R$ 4,50
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Banana Prata</h5>
+                            <p class="card-text">
+                                Banana prata da melhor qualidade possivel, direto do produtor rural para sua mesa
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <form class="d-block ">
+                                <button class="btn btn-danger">
+                                    Adicionar ao Carrinho
+                                </button>
+                            </form>
+                            <small class="text-success">320,5Kg em estoque</small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
